--- a/en/愰/愰.15683.wikitext
+++ b/en/愰/愰.15683.wikitext
@@ -1,27 +1,43 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心日火山 (PAFU)}}
+
 # clearness of mind
 # [[doubtful]]
 # [[uncertain]]
+
 ====References====
-{{Han ref|kx=0396.210|dkj=10995|dj=0735.090|hdz=42336.080|uh=6130|ud=24880}}
+* {{Han ref|kx=0396.210|dkj=10995|dj=0735.090|hdz=42336.080|uh=6130|ud=24880}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō), [[おう]] (ō)|kun=[[さとい]] (satoi)}}
+* {{ja-readings|on=[[こう]] (kō), [[おう]] (ō)|kun=[[さとい]] (satoi)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=황|eumhun=|rv=hwang|mr=hwang|y=hwang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[huǎng]] ([[huang3]])|wg=huang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愰]]
