--- a/en/垗/垗.13083.wikitext
+++ b/en/垗/垗.13083.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4211<sub>3</sub>|canj=土中一人 (GLMO)}}
+
 # [[sacrifice]]
+
 ====References====
-{{Han ref|kx=0228.030|dkj=05043|dj=0464.020|hdz=10440.060|uh=5797|ud=22423|bh=CE55|bd=52821}}
+* {{Han ref|kx=0228.030|dkj=05043|dj=0464.020|hdz=10440.060|uh=5797|ud=22423|bh=CE55|bd=52821}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jiu6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ちょう]] (chō), [[じょう]] (jō)|kun=[[はいりどころ]] (hauridokoro)}}
+* {{ja-readings|on=[[ちょう]] (chō), [[じょう]] (jō)|kun=[[はいりどころ]] (hauridokoro)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhào]] ([[zhao4]])|wg=chao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垗]]
