--- a/en/偯/偯.11135.wikitext
+++ b/en/偯/偯.11135.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2023<sub>2</sub>|canj=人卜口女 (OYRV), X人卜口女 (XOYRV)}}
+
 # sob
+
 ====References====
-{{Han ref|kx=0111.280|dkj=00892|hdz=10194.060|uh=506F|ud=20591|bh=B0C0|bd=45248}}
+* {{Han ref|kx=0111.280|dkj=00892|hdz=10194.060|uh=506F|ud=20591|bh=B0C0|bd=45248}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yi2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[い]] (i), [[え]] (e)|kun=[[なげく]] (nageku)}}
+* {{ja-readings|on=[[い]] (i), [[え]] (e)|kun=[[なげく]] (nageku)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=의|rv=ui|mr=ŭi}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǐ]] ([[yi3]])|wg=i<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偯]]
