--- a/en/垎/垎.13073.wikitext
+++ b/en/垎/垎.13073.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹水口 (GHER)}}
+
 # {{defn|Han|sort=土06}}
+
 ====References====
-{{Han ref|kx=0227.320|dkj=05033|dj=0463.210|hdz=10441.050|uh=578E|ud=22414}}
+* {{Han ref|kx=0227.320|dkj=05033|dj=0463.210|hdz=10441.050|uh=578E|ud=22414}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kè]] ([[ke4]])|wg=k'o<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垎]]
