--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2426<sub>4</sub>|canj=人廿大口 (OTKR)}}
+
 # thus, so, like, such
+
 ====References====
-{{Han ref|kx=0110.080|dkj=00840|dj=0235.030|hdz=10171.060|uh=504C|ud=20556|bh=B0B4|bd=45236}}
+* {{Han ref|kx=0110.080|dkj=00840|dj=0235.030|hdz=10171.060|uh=504C|ud=20556|bh=B0B4|bd=45236}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ye6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[じゃ]] (ja), [[にゃ]] (nya)|kun=[[このような]] (konoyouna), [[このように]] (konoyouni)}}
+* {{ja-readings|on=[[じゃ]] (ja), [[にゃ]] (nya)|kun=[[このような]] (konoyouna), [[このように]] (konoyouni)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=야|rv=ya|mr=ya}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[ruò]] ([[ruo4]])|wg=jo<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偌]]
