--- a/en/傊/傊.11162.wikitext
+++ b/en/傊/傊.11162.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人口月金 (ORBC)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.240|dkj=00944|dj=0240.090|hdz=10203.020|uh=508A|ud=20618}}
+* {{Han ref|kx=0112.240|dkj=00944|dj=0240.090|hdz=10203.020|uh=508A|ud=20618}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[いん]] (in)|kun=[[まさる]] (masaru), [[ゆたか]] (yutaka)}}
+* {{ja-readings|on=[[いん]] (in)|kun=[[まさる]] (masaru), [[ゆたか]] (yutaka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǔn]] ([[yun3]])|wg=yün<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傊]]
