--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -1,37 +1,55 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4216<sub>1</sub>|canj=土竹一口 (GHMR)}}
+
 # [[dirt]], [[filth]], [[stain]]s
 # [[dirty]]
+
 ====References====
-{{Han ref|kx=0228.190|dkj=05058|dj=0464.150|hdz=10440.010|uh=57A2|ud=22434|bh=ABAF|bd=43951}}
+* {{Han ref|kx=0228.190|dkj=05058|dj=0464.150|hdz=10440.010|uh=57A2|ud=22434|bh=ABAF|bd=43951}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gau3}}
+
 # {{defn|Cantonese}}
+
 ----
-== Japanese ==
+
+==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] ([[kō]]), [[く]] ([[ku]]), [[きく]] ([[kiku]])|kun=[[あか]] ([[aka]]), [[はじ]] ([[haji]])}}
+* {{ja-readings|on=[[こう]] ([[kō]]), [[く]] ([[ku]]), [[きく]] ([[kiku]])|kun=[[あか]] ([[aka]]), [[はじ]] ([[haji]])}}
 
 ===Noun===
 {{ja-noun|k|count=|hira=あか|kata=|rom=aka|kanji=|kyu=|shin=|hidx=}}
+
 # [[scum]]
 # [[dirt]]
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gòu]] ([[gou4]])|wg=kou<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垢]]
