--- a/en/惹/惹.15629.wikitext
+++ b/en/惹/惹.15629.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=4433<sub>6</sub>|canj=廿大口心 (TKRP)}}
+
 # [[irritate]], [[vex]], [[offend]], [[incite]]
+
 ====References====
-{{Han ref|kx=0393.010|dkj=10866|dj=0729.010|hdz=42309.010|uh=60F9|ud=24825|bh=B753|bd=46931}}
+* {{Han ref|kx=0393.010|dkj=10866|dj=0729.010|hdz=42309.010|uh=60F9|ud=24825|bh=B753|bd=46931}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ye5}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[じゃ]] (ja), [[じゃく]] (jaku)|kun=[[ひく]] (hiku)}}
+* {{ja-readings|on=[[じゃ]] (ja), [[じゃく]] (jaku)|kun=[[ひく]] (hiku)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=야|eumhun=|rv=ya|mr=ya|y=ya}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[rě]] ([[re3]])|wg=je<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惹]]
