--- a/en/偂/偂.11088.wikitext
+++ b/en/偂/偂.11088.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人廿月弓 (OTBN)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.210|dkj=00829|dj=0233.100|hdz=10195.030|uh=5042|ud=20546}}
+* {{Han ref|kx=0109.210|dkj=00829|dj=0233.100|hdz=10195.030|uh=5042|ud=20546}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[せん]] (sen)|kun=[[すすむ]] (susumu)}}
+* {{ja-readings|on=[[せん]] (sen)|kun=[[すすむ]] (susumu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiān]] ([[jian1]])|wg=chien<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偂]]
