--- a/en/愼/愼.15695.wikitext
+++ b/en/愼/愼.15695.wikitext
@@ -1,27 +1,42 @@
 {{see|眘}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心心月金 (PPBC)}}
+
 # act with care, be cautious
+
 ====References====
-{{Han ref|kx=0396.470|dkj=11024|dj=0735.340|hdz=42338.071|uh=613C|ud=24892}}
+* {{Han ref|kx=0396.470|dkj=11024|dj=0735.340|hdz=42338.071|uh=613C|ud=24892}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu)}}
+* {{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=신|eumhun=|rv=sin|mr=sin|y=sin}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cǎo]] ([[cao3]]), [[shèn]] ([[shen4]])|wg=ts'ao<sup>3</sup>, shen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愼]]
