--- a/en/坁/坁.12996.wikitext
+++ b/en/坁/坁.12996.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4214<sub>0</sub>|canj=土竹女心 (GHVP)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0224.250|dkj=04909|dj=0459.130|hdz=10425.020|uh=5741|ud=22337|bh=CAAA|bd=51882}}
+* {{Han ref|kx=0224.250|dkj=04909|dj=0459.130|hdz=10425.020|uh=5741|ud=22337|bh=CAAA|bd=51882}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ji2}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[し]] (shi)|kun=[[とまる]] (tomaru), [[さか]] (saka)}}
+* {{ja-readings|on=[[し]] (shi)|kun=[[とまる]] (tomaru), [[さか]] (saka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhǐ]] ([[zhi3]])|wg=chih<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坁]]
