--- a/en/傂/傂.11154.wikitext
+++ b/en/傂/傂.11154.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2121<sub>1</sub>|canj=人竹卜山 (OHYU)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.110|dkj=00931|dj=0239.280|hdz=10203.120|uh=5082|ud=20610|bh=D85E|bd=55390}}
+* {{Han ref|kx=0112.110|dkj=00931|dj=0239.280|hdz=10203.120|uh=5082|ud=20610|bh=D85E|bd=55390}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ち]] (chi), [[じ]] (ji), [[し]] (shi)|kun=[[かたたがい]] (katatagai), [[ひとしくない]] (hitoshikunai)}}
+* {{ja-readings|on=[[ち]] (chi), [[じ]] (ji), [[し]] (shi)|kun=[[かたたがい]] (katatagai), [[ひとしくない]] (hitoshikunai)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhì]] ([[zhi4]])|wg=chih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傂]]
