--- a/en/傋/傋.11163.wikitext
+++ b/en/傋/傋.11163.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2524<sub>7</sub>|canj=人廿廿月 (OTTB)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.260|dkj=00946|dj=0240.100|hdz=10200.010|uh=508B|ud=20619|bh=D855|bd=55381}}
+* {{Han ref|kx=0112.260|dkj=00946|dj=0240.100|hdz=10200.010|uh=508B|ud=20619|bh=D855|bd=55381}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gau3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō), [[く]] (ku)|kun=[[へつらわぬ]] (hetsurawanu), [[おろか]] (oroka)}}
+* {{ja-readings|on=[[こう]] (kō), [[く]] (ku)|kun=[[へつらわぬ]] (hetsurawanu), [[おろか]] (oroka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=강|rv=gang|mr=kang}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gòu]] ([[gou4]])|wg=kou<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傋]]
