--- a/en/坃/坃.12998.wikitext
+++ b/en/坃/坃.12998.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土一一山 (GMMU)}}
+
 # {{defn|Han|sort=土04}}
+
 ====References====
-{{Han ref|kx=0224.270|dkj=04912|dj=0459.160|hdz=10421.070|uh=5743|ud=22339}}
+* {{Han ref|kx=0224.270|dkj=04912|dj=0459.160|hdz=10421.070|uh=5743|ud=22339}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xūn]] ([[xun1]])|wg=hsün<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坃]]
