--- a/en/倲/倲.11064.wikitext
+++ b/en/倲/倲.11064.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=人木田 (ODW)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.110|dkj=00801|dj=0232.090|hdz=10172.040|uh=5032|ud=20530}}
+* {{Han ref|kx=0109.110|dkj=00801|dj=0232.090|hdz=10172.040|uh=5032|ud=20530}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とう]] (tō), [[つ]] (tsu)|kun=[[おろかなさま]] (orokanasama)}}
+* {{ja-readings|on=[[とう]] (tō), [[つ]] (tsu)|kun=[[おろかなさま]] (orokanasama)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=동|rv=dong|mr=tong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dōng]] ([[dong1]])|wg=tung<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倲]]
