--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -6,7 +6,7 @@ From the name of the British comedy troupe, Monty Python, and due to the type of
 ===Adjective===
 {{en-adj}}
 
-# [[surreal]] or [[absurd]] [[humour]]
+# (of [[humour]]) [[surreal]] or [[absurd]]
 
 ===See also===
 *[[w:Monty Python|Monty Python]]
