--- a/en/偧/偧.11127.wikitext
+++ b/en/偧/偧.11127.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=人大弓弓 (OKNN)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.170|dkj=00881|dj=0237.140|hdz=10188.100|uh=5067|ud=20583}}
+* {{Han ref|kx=0111.170|dkj=00881|dj=0237.140|hdz=10188.100|uh=5067|ud=20583}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[た]] (ta)|kun=[[はる]] (haru)}}
+* {{ja-readings|on=[[た]] (ta)|kun=[[はる]] (haru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhā]] ([[zha1]])|wg=cha<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偧]]
