--- a/en/昿/昿.17000.wikitext
+++ b/en/昿/昿.17000.wikitext
@@ -1,23 +1,34 @@
 {{see|曠}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈戈 (AII)}}
+
 # [[extensive]], [[wide]], [[broad]]
 # [[empty]]
+
 ====References====
-{{Han ref|kx=0494.181|hdz=21503.071|uh=663F|ud=26175}}
+* {{Han ref|kx=0494.181|hdz=21503.071|uh=663F|ud=26175}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こう]] (kō)|kun=[[あきらか]] (akiraka), [[むなしい]] (munashii)}}
+* {{ja-readings|on=[[こう]] (kō)|kun=[[あきらか]] (akiraka), [[むなしい]] (munashii)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kuàng]] ([[kuang4]])|wg=k'uang<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昿]]
