--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -8,7 +8,7 @@
 # [[suspend]], [[hand down]]
 
 ====References====
-{{Han ref|kx=0227.160|dkj=05012|dj=0463.020|hdz=10432.050|uh=5782|ud=22402|bh=ABAB|bd=43947}}
+* {{Han ref|kx=0227.160|dkj=05012|dj=0463.020|hdz=10432.050|uh=5782|ud=22402|bh=ABAB|bd=43947}}
 
 ----
 
@@ -38,24 +38,24 @@
 # {{defn|Japanese}}
 
 ====Readings====
-{{ja-readings|on=[[すい]] (''sui'')|kun=[[たれる]] ([[垂れる]], ''tareru''), [[たらす]] ([[垂らす]], ''tarasu''), [[たれ]] ([[垂れ]], ''tare''), [[なんなんとす]] ([[垂す]], ''nannantosu'')|nanori=[[たる]] (''taru''), [[だれ]] (''dare'')}}
+* {{ja-readings|on=[[すい]] (''sui'')|kun=[[たれる]] ([[垂れる]], ''tareru''), [[たらす]] ([[垂らす]], ''tarasu''), [[たれ]] ([[垂れ]], ''tare''), [[なんなんとす]] ([[垂す]], ''nannantosu'')|nanori=[[たる]] (''taru''), [[だれ]] (''dare'')}}
 
 ====Compounds====
 {{top3}}
-*[[垂直]] (''suichoku''): vertical, perpendicular
-*[[垂線]] (''suisen''): perpendicular line
-*[[懸垂]] (''kensui''): suspension, pendency
-*[[垂れる]] (''tareru''): hang down
+* [[垂直]] (''suichoku''): vertical, perpendicular
+* [[垂線]] (''suisen''): perpendicular line
+* [[懸垂]] (''kensui''): suspension, pendency
+* [[垂れる]] (''tareru''): hang down
 {{mid3}}
-*[[垂れ下がる]] (''taresagaru''): hang, dangle
-*[[雨垂れ]] (''amadare''): raindrops
-*[[垂らす]] (''tarasu''): hang down
-*[[髪を垂らす]] (''kami o tarasu''): let one's hair hang down
+* [[垂れ下がる]] (''taresagaru''): hang, dangle
+* [[雨垂れ]] (''amadare''): raindrops
+* [[垂らす]] (''tarasu''): hang down
+* [[髪を垂らす]] (''kami o tarasu''): let one's hair hang down
 {{mid3}}
-*[[垂れ]] (''tare''): sauce, gravy
-*[[胡麻垂れ]] (''gomadare''): sesame sauce
-*[[糞っ垂れ]] (''kusottare''): vulgar epithet
-*[[しみっ垂れ]] (''shimittare''): stinginess, miser
+* [[垂れ]] (''tare''): sauce, gravy
+* [[胡麻垂れ]] (''gomadare''): sesame sauce
+* [[糞っ垂れ]] (''kusottare''): vulgar epithet
+* [[しみっ垂れ]] (''shimittare''): stinginess, miser
 {{bottom}}
 
 ----
@@ -77,48 +77,48 @@
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[垂爱]]
-*[[垂成]]
-*[[垂垂]]
-*[[垂钓]]
-*[[垂范]]
-*[[垂挂]]
-*[[垂花门]]
-*[[垂绝]]
-*[[垂老]]
-*[[垂泪]]
-*[[垂怜]]
-*[[垂帘听政]]
-*[[垂柳]]
-*[[垂落]]
-*[[垂暮]]
-*[[垂念]]
-*[[垂盼]]
-*[[垂泣]]
-*[[垂青]]
-*[[垂示]]
-*[[垂手]]
-*[[垂首]]
-*[[垂死]]
-*[[垂体]]
-*[[垂涕]]
-*[[垂髫]]
-*[[垂头丧气]]
-*[[垂亡]]
-*[[垂危]]
-*[[垂问]]
-*[[垂涎]]
-*[[垂线]]
-*[[垂悬]]
-*[[垂询]]
-*[[垂杨柳]]
-*[[垂衣拱手]]
-*[[垂直]]
-*[[垂直带]]
-*[[垂直关系]]
-*[[垂直贸易]]
-*[[垂直起落飞机]]
-*[[垂直尾翼]]
+* [[垂爱]]
+* [[垂成]]
+* [[垂垂]]
+* [[垂钓]]
+* [[垂范]]
+* [[垂挂]]
+* [[垂花门]]
+* [[垂绝]]
+* [[垂老]]
+* [[垂泪]]
+* [[垂怜]]
+* [[垂帘听政]]
+* [[垂柳]]
+* [[垂落]]
+* [[垂暮]]
+* [[垂念]]
+* [[垂盼]]
+* [[垂泣]]
+* [[垂青]]
+* [[垂示]]
+* [[垂手]]
+* [[垂首]]
+* [[垂死]]
+* [[垂体]]
+* [[垂涕]]
+* [[垂髫]]
+* [[垂头丧气]]
+* [[垂亡]]
+* [[垂危]]
+* [[垂问]]
+* [[垂涎]]
+* [[垂线]]
+* [[垂悬]]
+* [[垂询]]
+* [[垂杨柳]]
+* [[垂衣拱手]]
+* [[垂直]]
+* [[垂直带]]
+* [[垂直关系]]
+* [[垂直贸易]]
+* [[垂直起落飞机]]
+* [[垂直尾翼]]
 
 [[fr:垂]]
 [[hu:垂]]
