--- a/en/垘/垘.13084.wikitext
+++ b/en/垘/垘.13084.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4313<sub>0</sub>|canj=土人戈大 (GOIK)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0228.040|dkj=05044|dj=0464.030|hdz=10439.130|uh=5798|ud=22424|bh=CE59|bd=52825}}
+* {{Han ref|kx=0228.040|dkj=05044|dj=0464.030|hdz=10439.130|uh=5798|ud=22424|bh=CE59|bd=52825}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ふく]] (fuku), [[ぶく]] (buku), [[ほく]] (hoku), [[ぼく]] (boku)|kun=[[くずれる]] (kuzureru), [[ながれる]] (nagareru)}}
+* {{ja-readings|on=[[ふく]] (fuku), [[ぶく]] (buku), [[ほく]] (hoku), [[ぼく]] (boku)|kun=[[くずれる]] (kuzureru), [[ながれる]] (nagareru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fú]] ([[fu2]])|wg=fu<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垘]]
