--- a/en/愒/愒.15654.wikitext
+++ b/en/愒/愒.15654.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9602<sub>7</sub>|canj=心日心女 (PAPV)}}
+
 # [[rest]], [[stop]]
+
 ====References====
-{{Han ref|kx=0394.350|dkj=10933|dj=0731.120|hdz=42328.030|uh=6112|ud=24850|bh=B474|bd=46196}}
+* {{Han ref|kx=0394.350|dkj=10933|dj=0731.120|hdz=42328.030|uh=6112|ud=24850|bh=B474|bd=46196}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei), [[けつ]] (ketsu), [[けち]] (kechi), [[かい]] (kai)|kun=[[いこう]] (ikou)}}
+* {{ja-readings|on=[[けい]] (kei), [[けつ]] (ketsu), [[けち]] (kechi), [[かい]] (kai)|kun=[[いこう]] (ikou)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kài]] ([[kai4]])|wg=k'ai<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愒]]
