--- a/en/偤/偤.11124.wikitext
+++ b/en/偤/偤.11124.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2826<sub>1</sub>|canj=人廿金田 (OTCW)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.100|dkj=00874|dj=0237.090|hdz=10193.030|uh=5064|ud=20580|bh=D461|bd=54369}}
+* {{Han ref|kx=0111.100|dkj=00874|dj=0237.090|hdz=10193.030|uh=5064|ud=20580|bh=D461|bd=54369}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ゆ]] (yu)|kun=[[はべる]] (haberu)}}
+* {{ja-readings|on=[[ゆ]] (yu)|kun=[[はべる]] (haberu)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǒu]] ([[you3]])|wg=yu<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偤]]
