--- a/en/垥/垥.13097.wikitext
+++ b/en/垥/垥.13097.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4816<sub>1</sub>|canj=土人一口 (GOMR)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0228.240|dkj=05063|dj=0464.200|hdz=10440.040|uh=57A5|ud=22437|bh=CE5C|bd=52828}}
+* {{Han ref|kx=0228.240|dkj=05063|dj=0464.200|hdz=10440.040|uh=57A5|ud=22437|bh=CE5C|bd=52828}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[きょう]] (kyō), [[こう]] (kō)|kun=}}
+* {{ja-readings|on=[[きょう]] (kyō), [[こう]] (kō)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垥]]
