--- a/en/傆/傆.11158.wikitext
+++ b/en/傆/傆.11158.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一竹火 (OMHF)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0112.200|dkj=00940|dj=0240.060|hdz=10202.050|uh=5086|ud=20614}}
+* {{Han ref|kx=0112.200|dkj=00940|dj=0240.060|hdz=10202.050|uh=5086|ud=20614}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[げん]] (gen), [[がん]] (gan), [[かん]] (kan)|kun=[[こざかしい]] (kozakashii)}}
+* {{ja-readings|on=[[げん]] (gen), [[がん]] (gan), [[かん]] (kan)|kun=[[こざかしい]] (kozakashii)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[páng]] ([[pang2]]), [[yuàn]] ([[yuan4]])|wg=p'ang<sup>2</sup>, yüan<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傆]]
