--- a/en/垃/垃.13062.wikitext
+++ b/en/垃/垃.13062.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4011<sub>8</sub>|canj=土卜廿 (GYT)}}
+
 # [[garbage]], [[refuse]], [[waste]]
+
 ====References====
-{{Han ref|kx=0227.271|dkj=05029|dj=0463.140|hdz=10434.060|uh=5783|ud=22403|bh=A955|bd=43349}}
+* {{Han ref|kx=0227.271|dkj=05029|dj=0463.140|hdz=10434.060|uh=5783|ud=22403|bh=A955|bd=43349}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=laap6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[らつ]] (ratsu)|kun=}}
+* {{ja-readings|on=[[らつ]] (ratsu)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[lā]] ([[la1]])|wg=la<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垃]]
