--- a/en/垀/垀.13059.wikitext
+++ b/en/垀/垀.13059.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4214<sub>9</sub>|canj=土竹火木 (GHFD)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.140|dkj=05010|dj=0462.300|hdz=10433.060|uh=5780|ud=22400|bh=CBF9|bd=52217}}
+* {{Han ref|kx=0227.140|dkj=05010|dj=0462.300|hdz=10433.060|uh=5780|ud=22400|bh=CBF9|bd=52217}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こ]] (ko), [[く]] (ku)|kun=[[かまへ]] (kamahe), [[わずらはい]] (wazurahai)}}
+* {{ja-readings|on=[[こ]] (ko), [[く]] (ku)|kun=[[かまへ]] (kamahe), [[わずらはい]] (wazurahai)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hū]] ([[hu1]])|wg=hu<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垀]]
