--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -1,32 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9802<sub>1</sub>|canj=心人一弓 (POMN)|ids=⿰[[忄]][[俞]]}}
+
 # [[pleasant]], [[delightful]]
 # [[please]]
+
 ====References====
-{{Han ref|kx=0394.040|dkj=10905|dj=0730.150|hdz=42330.010|uh=6109|ud=24841|bh=B472|bd=46194}}
+* {{Han ref|kx=0394.040|dkj=10905|dj=0730.150|hdz=42330.010|uh=6109|ud=24841|bh=B472|bd=46194}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=yu4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=c|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ゆ]] (yu), [[とう]] (tō)|kun=[[たのしむ]] (tanoshimu), [[たのしい]] (tanoshii)}}
+* {{ja-readings|on=[[ゆ]] (yu), [[とう]] (tō)|kun=[[たのしむ]] (tanoshimu), [[たのしい]] (tanoshii)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=유|eumhun=|rv=yu|mr=yu|y=yu}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yú]] ([[yu2]])|wg=yü<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愉]]
