--- a/en/坣/坣.13030.wikitext
+++ b/en/坣/坣.13030.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=火月土 (FBG)}}
+
 # {{defn|Han|sort=土05}}
+
 ====References====
-{{Han ref|kx=0226.130|dkj=04968|dj=0461.270|hdz=10431.020|uh=5763|ud=22371}}
+* {{Han ref|kx=0226.130|dkj=04968|dj=0461.270|hdz=10431.020|uh=5763|ud=22371}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[nì]] ([[ni4]]), [[tāng]] ([[tang1]])|wg=ni<sup>4</sup>, t'ang<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坣]]
