--- a/en/愓/愓.15655.wikitext
+++ b/en/愓/愓.15655.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9802<sub>7</sub>|canj=心日一竹 (PAMH)}}
+
 # [[profligate]]
+
 ====References====
-{{Han ref|kx=0395.020|dkj=10936|dj=0731.090|hdz=42327.130|uh=6113|ud=24851|bh=D945|bd=55621}}
+* {{Han ref|kx=0395.020|dkj=10936|dj=0731.090|hdz=42327.130|uh=6113|ud=24851|bh=D945|bd=55621}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とう]] (tō), [[どう]] (dō), [[しょう]] (shō), [[よう]] (yō)|kun=[[ほしいまま]] (hoshiimama)}}
+* {{ja-readings|on=[[とう]] (tō), [[どう]] (dō), [[しょう]] (shō), [[よう]] (yō)|kun=[[ほしいまま]] (hoshiimama)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[dàng]] ([[dang4]]), [[shāng]] ([[shang1]])|wg=tang<sup>4</sup>, shang<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愓]]
