--- a/en/垞/垞.13090.wikitext
+++ b/en/垞/垞.13090.wikitext
@@ -1,32 +1,52 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=4311<sub>4</sub>|canj=土十竹心 (GJHP)}}
+
 # small mound
 # place name
 # [[hillock]]
+
 ====References====
-{{Han ref|kx=0228.110|dkj=05051|dj=0464.090|hdz=10442.040|uh=579E|ud=22430|bh=CE51|bd=52817}}
+* {{Han ref|kx=0228.110|dkj=05051|dj=0464.090|hdz=10442.040|uh=579E|ud=22430|bh=CE51|bd=52817}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=cha4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[た]] (ta), [[だ]] (da)|kun=}}
+* {{ja-readings|on=[[た]] (ta), [[だ]] (da)|kun=}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=타|rv=ta|mr=t'a}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[chá]] ([[cha2]])|wg=ch'a<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垞]]
