--- a/en/慂/慂.15701.wikitext
+++ b/en/慂/慂.15701.wikitext
@@ -1,27 +1,42 @@
 {{see|恿}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=水月心 (EBP), XX水月心 (XXEBP)}}
+
 # urge, incite, egg-on
+
 ====References====
-{{Han ref|kx=0397.170|dkj=11039|dj=0736.110|hdz=42334.160|uh=6142|ud=24898}}
+* {{Han ref|kx=0397.170|dkj=11039|dj=0736.110|hdz=42334.160|uh=6142|ud=24898}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[しいる]] (shiiru), [[すすめる]] (susumeru)}}
+* {{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[しいる]] (shiiru), [[すすめる]] (susumeru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=용|eumhun=|rv=yong|mr=yong|y=yong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慂]]
