--- a/en/垁/垁.13060.wikitext
+++ b/en/垁/垁.13060.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土人大 (GOK), XX土人大 (XXGOK)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.150|dkj=05011|dj=0463.010|hdz=10432.060|uh=5781|ud=22401}}
+* {{Han ref|kx=0227.150|dkj=05011|dj=0463.010|hdz=10432.060|uh=5781|ud=22401}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ち]] (chi), [[じ]] (ji)|kun=}}
+* {{ja-readings|on=[[ち]] (chi), [[じ]] (ji)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhì]] ([[zhi4]])|wg=chih<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垁]]
