--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -5,8 +5,8 @@
 From {{L.}} {{term|lang=la|id est||that is}}.
 
 ===Pronunciation===
+* (''[[Received Pronunciation|UK]]''): {{IPA|/ˌaɪˈi:/}}
 * {{audio|en-us-i.e..ogg|Audio (US)}}
-{{rfp}}
 
 ==={{abbreviation}}===
 '''i.e.'''
