--- a/en/昐/昐.16952.wikitext
+++ b/en/昐/昐.16952.wikitext
@@ -1,20 +1,29 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6802<sub>7</sub>|canj=日金尸竹 (ACSH)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0491.180|dkj=13808|dj=0854.030|hdz=21491.050|uh=6610|ud=26128|bh=CCD0|bd=52432}}
+* {{Han ref|kx=0491.180|dkj=13808|dj=0854.030|hdz=21491.050|uh=6610|ud=26128|bh=CCD0|bd=52432}}
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=분|eumhun=|rv=bun|mr=pun|y=pun}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cuò]] ([[cuo4]]), [[fēn]] ([[fen1]]), [[xī]] ([[xi1]])|wg=ts'o<sup>4</sup>, fen<sup>1</sup>, hsi<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昐]]
