--- a/en/愇/愇.15643.wikitext
+++ b/en/愇/愇.15643.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心木一手 (PDMQ)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0394.010|dkj=10902|dj=0730.120|hdz=42332.050|uh=6107|ud=24839}}
+* {{Han ref|kx=0394.010|dkj=10902|dj=0730.120|hdz=42332.050|uh=6107|ud=24839}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[い]] (i)|kun=[[うらむ]] (uramu), [[あさい]] (asai), [[よい]] (yoi)}}
+* {{ja-readings|on=[[い]] (i)|kun=[[うらむ]] (uramu), [[あさい]] (asai), [[よい]] (yoi)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[wěi]] ([[wei3]])|wg=wei<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愇]]
