--- a/en/坾/坾.13057.wikitext
+++ b/en/坾/坾.13057.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=|canj=土十一弓 (GJMN)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0227.120|dkj=05008|dj=0462.280|hdz=10435.030|uh=577E|ud=22398}}
+* {{Han ref|kx=0227.120|dkj=05008|dj=0462.280|hdz=10435.030|uh=577E|ud=22398}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ちょ]] (cho), [[じょ]] (jo)|kun=}}
+* {{ja-readings|on=[[ちょ]] (cho), [[じょ]] (jo)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhù]] ([[zhu4]])|wg=chu<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坾]]
