--- a/en/昚/昚.16962.wikitext
+++ b/en/昚/昚.16962.wikitext
@@ -1,16 +1,21 @@
 {{see|愼}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=大金日 (KCA)}}
+
 # {{defn|Han|sort=日05}}
+
 ====References====
-{{Han ref|kx=0492.130|dkj=13828|hdz=21499.060|uh=661A|ud=26138}}
+* {{Han ref|kx=0492.130|dkj=13828|hdz=21499.060|uh=661A|ud=26138}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[shèn]] ([[shen4]])|wg=shen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昚]]
