--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -31,6 +31,7 @@
 # {{chemistry}} a [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s
 # {{electronics}} an unintended [[solder]] [[connection]] between two or more [[component]]s or pins
 # Any of several [[electrical]] [[device]]s that [[measure]] characteristics such as [[impedance]] and [[inductance]] by [[balancing]] different parts of a [[circuit]]
+# {{context|sports|billiards|snooker|pool}} A particular form of one hand placed on the table to support the [[cue]] when making a shot in cue sports.
 
 =====Translations=====
 {{trans-top|construction or natural feature that spans a divide}}
