--- a/en/偮/偮.11134.wikitext
+++ b/en/偮/偮.11134.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2624<sub>1</sub>|canj=人口尸十 (ORSJ)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0111.270|dkj=00891|dj=0238.010|hdz=10190.020|uh=506E|ud=20590|bh=D464|bd=54372}}
+* {{Han ref|kx=0111.270|dkj=00891|dj=0238.010|hdz=10190.020|uh=506E|ud=20590|bh=D464|bd=54372}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しゅう]] (shū)|kun=}}
+* {{ja-readings|on=[[しゅう]] (shū)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jí]] ([[ji2]])|wg=chi<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偮]]
