--- a/en/慚/慚.15726.wikitext
+++ b/en/慚/慚.15726.wikitext
@@ -1,33 +1,52 @@
 {{see|惭}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9202<sub>1</sub>|canj=心十十中 (PJJL)}}
+
 # [[ashamed]], [[humiliated]]
 # [[shameful]]
+
 ====References====
-{{Han ref|kx=0398.400|dkj=11096|dj=0738.050|hdz=42344.200|uh=615A|ud=24922|bh=BA46|bd=47686}}
+* {{Han ref|kx=0398.400|dkj=11096|dj=0738.050|hdz=42344.200|uh=615A|ud=24922|bh=BA46|bd=47686}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chaam4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心11}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ざん]] (zan)|kun=[[はじる]] (hajiru), [[はじ]] (haji)}}
+* {{ja-readings|on=[[ざん]] (zan)|kun=[[はじる]] (hajiru), [[はじ]] (haji)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=참|eumhun=|rv=cham|mr=ch'am|y=cham}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|sim=惭|pin=[[cán]] ([[can2]])|wg=ts'an<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慚]]
