--- a/en/坕/坕.13016.wikitext
+++ b/en/坕/坕.13016.wikitext
@@ -1,13 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=竹人土 (HOG)}}
+
 # {{defn|Han|sort=土04}}
+
 ====References====
-{{Han ref|kx=0226.090|dkj=04942|dj=0461.090|hdz=10423.080|uh=5755|ud=22357}}
+* {{Han ref|kx=0226.090|dkj=04942|dj=0461.090|hdz=10423.080|uh=5755|ud=22357}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jīng]] ([[jing1]])|wg=ching<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坕]]
