--- a/en/愤/愤.15671.wikitext
+++ b/en/愤/愤.15671.wikitext
@@ -1,23 +1,31 @@
 {{see|憤}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=|canj=心十廿人 (PJTO)}}
+
 # [[resent]], [[hate]]
 # [[indignant]]
+
 ====References====
-{{Han ref|kx=0396.071|hdz=42325.140|uh=6124|ud=24868}}
+* {{Han ref|kx=0396.071|hdz=42325.140|uh=6124|ud=24868}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=fan5}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|tra=憤|pin=[[fèn]] ([[fen4]]), [[shuò]] ([[shuo4]])|wg=fen<sup>4</sup>, shuo<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愤]]
