--- a/en/愂/愂.15638.wikitext
+++ b/en/愂/愂.15638.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=|canj=十尸心 (JSP)}}
+
 # {{defn|Han|sort=心09}}
+
 ====References====
-{{Han ref|kx=0393.250|dkj=10890|dj=0730.020|hdz=42321.010|uh=6102|ud=24834}}
+* {{Han ref|kx=0393.250|dkj=10890|dj=0730.020|hdz=42321.010|uh=6102|ud=24834}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぼつ]] (botsu), [[はい]] (hai)|kun=[[もとる]] (motoru)}}
+* {{ja-readings|on=[[ぼつ]] (botsu), [[はい]] (hai)|kun=[[もとる]] (motoru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bèi]] ([[bei4]])|wg=pei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愂]]
