--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -64,6 +64,7 @@ flexed form of [[blond]]
 '''blonde''' {{f}}
 # {{context|Canadian French|slang|lang=fr}} [[girlfriend]]
 
+Le TYANNAH
 ----
 
 ==Swedish==
