--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English== TYANNAH IS A BLONDE EMO
 ===Etymology===
 from Middle French "''blonde''" (feminine). The masculine form of the word is "''blond''." 
 
@@ -41,6 +41,7 @@ In the English language, it is only one a few distinct words where the gender di
 [[Category:Yellows]]
 
 ----
+
 ==Dutch==
 ===Adjective===
 '''blonde'''
