--- a/en/愸/愸.15691.wikitext
+++ b/en/愸/愸.15691.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=|canj=木尸心 (DSP), X木尸心 (XDSP)}}
+
 # {{defn|Han|sort=心10}}
+
 ====References====
-{{Han ref|kx=0396.390|dkj=11016|dj=0735.290|hdz=42333.110|uh=6138|ud=24888}}
+* {{Han ref|kx=0396.390|dkj=11016|dj=0735.290|hdz=42333.110|uh=6138|ud=24888}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[zhěng]] ([[zheng3]])|wg=cheng<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愸]]
